# gprustos

./: Cargo.toml  LICENSE-MIT  Makefile  README.md
libs/bump_allocator/: Cargo.toml
libs/bump_allocator/src/: lib.rs
libs/hole_list_allocator/: Cargo.toml
libs/hole_list_allocator/src/: lib.rs
src/: lib.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  long_mode_init.asm
src/memory/: area_frame_allocator.rs  mod.rs
src/memory/paging/: activepagetable.rs  entry.rs  inactivepagetable.rs  mapper.rs  mod.rs  page.rs  table.rs  temporarypage.rs
