[package]
name = "hole_list_allocator"
version = "0.1.0"
authors = ["Gareth Pendleton <gareth.sidebottom@gmail.com>"]

[dependencies]
spin = "0.4.2"
linked_list_allocator = "0.2.2"

[dependencies.lazy_static]
version = "0.2.1"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
